add new styles and information

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Prueba Deploy UTN</title>
 </head>
 <body>
     <h1>Titulo de prueba</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit earum doloremque vel aliquid iure explicabo magnam, corrupti quo nemo, modi similique pariatur ipsa quas illum provident a totam unde molestiae?</p>
+    <p>Testeando el funcionamiento de git y github mientras voy jugando con css y html para hacer algo interesante espero salga algo cool y no se aburran leyendo este texto que con tanto esfuerzo y dedicacion lo escribi para ustedes.</p>
     <ul>
-        <li>Home</li>
-        <li>Contact</li>
-        <li>Project</li>
+        <li><a href="https://www.instagram.com/lautyjlz/" target="_blank"><i class="fa-brands fa-square-instagram"> Instagram</i></a></li>
+        <li><a href="https://www.facebook.com/lauty.jlz/" target="_blank"><i class="fa-brands fa-square-facebook"> Facebook</i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCreTbbDTc5FUnatOEVnUxJw" target="_blank"><i class="fa-brands fa-youtube"> YouTube</i></a></li>
     </ul>
 </body>
 </html>
