Change inf for haziel bio

--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
     <title>Prueba Deploy UTN</title>
 </head>
 <body>
-    <h1>Titulo de prueba</h1>
-    <p>Testeando el funcionamiento de git y github mientras voy jugando con css y html para hacer algo interesante espero salga algo cool y no se aburran leyendo este texto que con tanto esfuerzo y dedicacion lo escribi para ustedes.</p>
+    <div class="container">
+        <div class="tittle"><h1>Haziel Zalazar</h1></div>
+    <div class="container-inf">
     <ul>
-        <li><a href="https://www.instagram.com/lautyjlz/" target="_blank"><i class="fa-brands fa-square-instagram"> Instagram</i></a></li>
-        <li><a href="https://www.facebook.com/lauty.jlz/" target="_blank"><i class="fa-brands fa-square-facebook"> Facebook</i></a></li>
-        <li><a href="https://www.youtube.com/channel/UCreTbbDTc5FUnatOEVnUxJw" target="_blank"><i class="fa-brands fa-youtube"> YouTube</i></a></li>
+        <li>14 años</li>
+        <li>SOLTERO</li>
+        <li>Jugador de LOL</li>
+        <li>No soy timido ni a palo</li>
+        <li>Le tengo miedo al h20</li>
+        <li>Todavía no aprendi a despertarme solo</li>
+        <li>Para cualquier interesada escribirme a mi ig <a href="https://www.instagram.com/zalazarhaziel/?hl=es-la"> @Haziel</a></li>
     </ul>
+    </div>
+    <div class="container-img"><img src="assets/haziel.jpg" alt=""></div>
+    </div>
 </body>
 </html>
